# caphe-forecast

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: daily-refresh.yml
notebooks/: validation_findingds.md
scripts/: backfill.py  backtest.py  check_vol_dates.py  db.py  fetch_futures.py  regime_backtest.py  schema.sql  test_db.py  validate_assumptions.py  vol_backtest.py
src/caphe_forecast/utils/: db.py
