[project]
name = "caphe-forecast"
version = "0.1.0"
description = "Decision-support tool for Vietnamese coffee farmers — should I sell now or hold?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pytest>=8.2",
    "ruff>=0.5",
    "black>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caphe_forecast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]